tests/niminaction/Chapter2/no_seq_type.nim
discard """
  line: 6
  errormsg: "cannot infer the type of the sequence"
"""

var list = @[]